# cortex_engine

./: .air.toml  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  compile.sh  cortex  cortex.db  go.mod  go.sum  out.md  readme.md
.github/workflows/: cmake-multi-platform.yml
cmd/: main.go
internal/launcher/: launcher.go
pkg/core/database/: database.go
pkg/core/window/: window.go
pkg/graphics/opengl/: render.go  shader.go  texture.go
pkg/graphics/shaders/: basic.frag  basic.vert
pkg/graphics/vulkan/: context.go
pkg/ui/menu/: main_menu.go
pkg/ui/project/: selector.go
src/: main.cpp  main.rs
src/core/: Engine.hpp  EngineState.hpp  engine.rs  mod.rs
src/core/components/: Components.hpp  mod.rs
src/core/ecs/: World.hpp  mod.rs
src/core/events/: EventSystem.hpp  mod.rs
src/domain/entities/: Project.hpp  project.rs
src/domain/services/: ProjectManager.hpp
src/game/: button.rs  mod.rs  state.rs
src/infrastructure/: mod.rs
src/infrastructure/rendering/: Renderer.hpp  mod.rs  renderer.rs
src/infrastructure/resources/: asset_manager.rs  mod.rs
src/infrastructure/storage/: ProjectRepository.cpp  ProjectRepository.hpp  project_repository.rs
src/presentation/ui/: Button.hpp  CreateProjectDialog.hpp  ProjectDialog.hpp  Theme.hpp  button.rs  mod.rs  project_dialog.rs
src/presentation/ui/components/: TextInput.hpp
src/presentation/ui/dialogs/: Dialog.hpp
src/presentation/ui/editor/: EditorUI.hpp  FileExplorer.hpp  Inspector.hpp  MenuBar.hpp
src/utils/: hot_reload.rs  mod.rs
